src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImGuiSizeCallbackData_t ImGuiSizeCallbackData;                  
typedef int ImGuiCond;            
typedef int ImGuiFocusedFlags;      
typedef int ImGuiHoveredFlags;      
typedef void (*ImGuiSizeCallback)(ImGuiSizeCallbackData* data);           
CIMGUI_API bool        ImGui_IsWindowAppearing(void);
CIMGUI_API bool        ImGui_IsWindowCollapsed(void);
CIMGUI_API bool        ImGui_IsWindowFocused(ImGuiFocusedFlags flags );  
CIMGUI_API bool        ImGui_IsWindowHovered(ImGuiHoveredFlags flags );  
ui or my application?" for details.
CIMGUI_API ImDrawList* ImGui_GetWindowDrawList(void);                             
CIMGUI_API ImVec2      ImGui_GetWindowPos(void);                                  
CIMGUI_API ImVec2      ImGui_GetWindowSize(void);                                 
CIMGUI_API float       ImGui_GetWindowWidth(void);                                
CIMGUI_API float       ImGui_GetWindowHeight(void);                               
CIMGUI_API void ImGui_SetNextWindowPosEx(ImVec2 pos, ImGuiCond cond , ImVec2 pivot );  
CIMGUI_API void ImGui_SetNextWindowSize(ImVec2 size, ImGuiCond cond );                                     
CIMGUI_API void ImGui_SetNextWindowSizeConstraints(ImVec2 size_min, ImVec2 size_max, ImGuiSizeCallback custom_callback , void* custom_callback_data ); 
CIMGUI_API void ImGui_SetNextWindowContentSize(ImVec2 size);                                                        
CIMGUI_API void ImGui_SetNextWindowCollapsed(bool collapsed, ImGuiCond cond );                             
CIMGUI_API void ImGui_SetNextWindowFocus(void);                                                                     
CIMGUI_API void ImGui_SetNextWindowScroll(ImVec2 scroll);                                                           
CIMGUI_API void ImGui_SetNextWindowBgAlpha(float alpha);                                                            
CIMGUI_API void ImGui_SetWindowPos(ImVec2 pos, ImGuiCond cond );                                           
CIMGUI_API void ImGui_SetWindowSize(ImVec2 size, ImGuiCond cond );                                         
CIMGUI_API void ImGui_SetWindowCollapsed(bool collapsed, ImGuiCond cond );                                 
CIMGUI_API void ImGui_SetWindowFocus(void);                                                                         
CIMGUI_API void ImGui_SetWindowPosStr(const char* name, ImVec2 pos, ImGuiCond cond );                      
CIMGUI_API void ImGui_SetWindowSizeStr(const char* name, ImVec2 size, ImGuiCond cond );                    
CIMGUI_API void ImGui_SetWindowCollapsedStr(const char* name, bool collapsed, ImGuiCond cond );            
CIMGUI_API void ImGui_SetWindowFocusStr(const char* name);                                                          
CIMGUI_API float ImGui_GetScrollX(void);                                                     
CIMGUI_API float ImGui_GetScrollY(void);                                                     
CIMGUI_API void  ImGui_SetScrollX(float scroll_x);                                           
CIMGUI_API void  ImGui_SetScrollY(float scroll_y);                                           
CIMGUI_API float ImGui_GetScrollMaxX(void);                                                  
CIMGUI_API float ImGui_GetScrollMaxY(void);                                                  
CIMGUI_API void  ImGui_SetScrollHereX(float center_x_ratio );                    
CIMGUI_API void  ImGui_SetScrollHereY(float center_y_ratio );                    
CIMGUI_API void  ImGui_SetScrollFromPosX(float local_x, float center_x_ratio );  
CIMGUI_API void  ImGui_SetScrollFromPosY(float local_y, float center_y_ratio );  
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiWindowFlags_None                      = 0,
    ImGuiWindowFlags_NoTitleBar                = 1<<0,   
    ImGuiWindowFlags_NoResize                  = 1<<1,   
    ImGuiWindowFlags_NoMove                    = 1<<2,   
    ImGuiWindowFlags_NoScrollbar               = 1<<3,   
    ImGuiWindowFlags_NoScrollWithMouse         = 1<<4,   
    ImGuiWindowFlags_NoCollapse                = 1<<5,   
    ImGuiWindowFlags_AlwaysAutoResize          = 1<<6,   
    ImGuiWindowFlags_NoBackground              = 1<<7,   
    ImGuiWindowFlags_NoSavedSettings           = 1<<8,   
    ImGuiWindowFlags_NoMouseInputs             = 1<<9,   
    ImGuiWindowFlags_MenuBar                   = 1<<10,  
    ImGuiWindowFlags_HorizontalScrollbar       = 1<<11,  
    ImGuiWindowFlags_NoFocusOnAppearing        = 1<<12,  
    ImGuiWindowFlags_NoBringToFrontOnFocus     = 1<<13,  
    ImGuiWindowFlags_AlwaysVerticalScrollbar   = 1<<14,  
    ImGuiWindowFlags_AlwaysHorizontalScrollbar = 1<<15,  
    ImGuiWindowFlags_NoNavInputs               = 1<<16,  
    ImGuiWindowFlags_NoNavFocus                = 1<<17,  
    ImGuiWindowFlags_UnsavedDocument           = 1<<18,  
    ImGuiWindowFlags_NoNav                     = ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_NoDecoration              = ImGuiWindowFlags_NoTitleBar | ImGuiWindowFlags_NoResize | ImGuiWindowFlags_NoScrollbar | ImGuiWindowFlags_NoCollapse,
    ImGuiWindowFlags_NoInputs                  = ImGuiWindowFlags_NoMouseInputs | ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_ChildWindow               = 1<<24,  
    ImGuiWindowFlags_Tooltip                   = 1<<25,  
    ImGuiWindowFlags_Popup                     = 1<<26,  
    ImGuiWindowFlags_Modal                     = 1<<27,  
    ImGuiWindowFlags_ChildMenu                 = 1<<28,  
} ImGuiWindowFlags_;
typedef enum
{
    ImGuiHoveredFlags_None                         = 0,      
    ImGuiHoveredFlags_ChildWindows                 = 1<<0,   
    ImGuiHoveredFlags_RootWindow                   = 1<<1,   
    ImGuiHoveredFlags_AnyWindow                    = 1<<2,   
    ImGuiHoveredFlags_NoPopupHierarchy             = 1<<3,   
    ImGuiHoveredFlags_AllowWhenBlockedByPopup      = 1<<5,   
    ImGuiHoveredFlags_AllowWhenBlockedByActiveItem = 1<<7,   
    ImGuiHoveredFlags_AllowWhenOverlappedByItem    = 1<<8,   
    ImGuiHoveredFlags_AllowWhenOverlappedByWindow  = 1<<9,   
    ImGuiHoveredFlags_AllowWhenDisabled            = 1<<10,  
    ImGuiHoveredFlags_NoNavOverride                = 1<<11,  
    ImGuiHoveredFlags_AllowWhenOverlapped          = ImGuiHoveredFlags_AllowWhenOverlappedByItem | ImGuiHoveredFlags_AllowWhenOverlappedByWindow,
    ImGuiHoveredFlags_RectOnly                     = ImGuiHoveredFlags_AllowWhenBlockedByPopup | ImGuiHoveredFlags_AllowWhenBlockedByActiveItem | ImGuiHoveredFlags_AllowWhenOverlapped,
    ImGuiHoveredFlags_RootAndChildWindows          = ImGuiHoveredFlags_RootWindow | ImGuiHoveredFlags_ChildWindows,
    ImGuiHoveredFlags_ForTooltip                   = 1<<12,  
    ImGuiHoveredFlags_Stationary                   = 1<<13,  
    ImGuiHoveredFlags_DelayNone                    = 1<<14,  
    ImGuiHoveredFlags_DelayShort                   = 1<<15,  
    ImGuiHoveredFlags_DelayNormal                  = 1<<16,  
    ImGuiHoveredFlags_NoSharedDelay                = 1<<17,  
} ImGuiHoveredFlags_;
typedef enum
{
    ImGuiCol_Text,
    ImGuiCol_TextDisabled,
    ImGuiCol_WindowBg,                                                
    ImGuiCol_ChildBg,                                                 
    ImGuiCol_PopupBg,                                                 
    ImGuiCol_Border,
    ImGuiCol_BorderShadow,
    ImGuiCol_FrameBg,                                                 
    ImGuiCol_FrameBgHovered,
    ImGuiCol_FrameBgActive,
    ImGuiCol_TitleBg,                                                 
    ImGuiCol_TitleBgActive,                                           
    ImGuiCol_TitleBgCollapsed,                                        
    ImGuiCol_MenuBarBg,
    ImGuiCol_ScrollbarBg,
    ImGuiCol_ScrollbarGrab,
    ImGuiCol_ScrollbarGrabHovered,
    ImGuiCol_ScrollbarGrabActive,
    ImGuiCol_CheckMark,                                               
    ImGuiCol_SliderGrab,
    ImGuiCol_SliderGrabActive,
    ImGuiCol_Button,
    ImGuiCol_ButtonHovered,
    ImGuiCol_ButtonActive,
    ImGuiCol_Header,                                                  
    ImGuiCol_HeaderHovered,
    ImGuiCol_HeaderActive,
    ImGuiCol_Separator,
    ImGuiCol_SeparatorHovered,
    ImGuiCol_SeparatorActive,
    ImGuiCol_ResizeGrip,                                              
    ImGuiCol_ResizeGripHovered,
    ImGuiCol_ResizeGripActive,
    ImGuiCol_InputTextCursor,                                         
    ImGuiCol_TabHovered,                                              
    ImGuiCol_Tab,                                                     
    ImGuiCol_TabSelected,                                             
    ImGuiCol_TabSelectedOverline,                                     
    ImGuiCol_TabDimmed,                                               
    ImGuiCol_TabDimmedSelected,                                       
    ImGuiCol_TabDimmedSelectedOverline,                               
    ImGuiCol_PlotLines,
    ImGuiCol_PlotLinesHovered,
    ImGuiCol_PlotHistogram,
    ImGuiCol_PlotHistogramHovered,
    ImGuiCol_TableHeaderBg,                                           
    ImGuiCol_TableBorderStrong,                                       
    ImGuiCol_TableBorderLight,                                        
    ImGuiCol_TableRowBg,                                              
    ImGuiCol_TableRowBgAlt,                                           
    ImGuiCol_TextLink,                                                
    ImGuiCol_TextSelectedBg,                                          
    ImGuiCol_TreeLines,                                               
    ImGuiCol_DragDropTarget,                                          
    ImGuiCol_DragDropTargetBg,                                        
    ImGuiCol_UnsavedMarker,                                           
    ImGuiCol_NavCursor,                                               
    ImGuiCol_NavWindowingHighlight,                                   
    ImGuiCol_NavWindowingDimBg,                                       
    ImGuiCol_ModalWindowDimBg,                                        
    ImGuiCol_COUNT,
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiCol_TabActive                 = ImGuiCol_TabSelected,        
    ImGuiCol_TabUnfocused              = ImGuiCol_TabDimmed,          
    ImGuiCol_TabUnfocusedActive        = ImGuiCol_TabDimmedSelected,  
    ImGuiCol_NavHighlight              = ImGuiCol_NavCursor,          
#endif 
} ImGuiCol_;
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );