src/Sdl3Sharp.ImGui/Native/ImGui.cs


    /// <summary>
    /// Windows Utilities
    /// - 'current window' = the window we are appending into while inside a Begin()/End() block. 'next window' = next window we will Begin() into.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsWindowAppearing")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsWindowAppearing();

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsWindowCollapsed")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsWindowCollapsed();

    /// <summary>
    /// is current window focused? or its root/child, depending on flags. see flags for options.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsWindowFocused")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsWindowFocused(ImGuiFocusedFlags flags);

    /// <summary>
    /// is current window hovered and hoverable (e.g. not blocked by a popup/modal)? See ImGuiHoveredFlags_ for options. IMPORTANT: If you are trying to check whether your mouse should be dispatched to Dear ImGui or to your underlying app, you should not use this function! Use the 'io.WantCaptureMouse' boolean for that! Refer to FAQ entry "How can I tell whether to dispatch mouse/keyboard to Dear ImGui or my application?" for details.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsWindowHovered")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsWindowHovered(ImGuiHoveredFlags flags);

    /// <summary>
    /// get draw list associated to the current window, to append your own drawing primitives
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetWindowDrawList")]
    public static partial ImDrawList* GetWindowDrawList();

    /// <summary>
    /// get current window position in screen space (IT IS UNLIKELY YOU EVER NEED TO USE THIS. Consider always using GetCursorScreenPos() and GetContentRegionAvail() instead)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetWindowPos")]
    public static partial ImVec2 GetWindowPos();

    /// <summary>
    /// get current window size (IT IS UNLIKELY YOU EVER NEED TO USE THIS. Consider always using GetCursorScreenPos() and GetContentRegionAvail() instead)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetWindowSize")]
    public static partial ImVec2 GetWindowSize();

    /// <summary>
    /// get current window width (IT IS UNLIKELY YOU EVER NEED TO USE THIS). Shortcut for GetWindowSize().x.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetWindowWidth")]
    public static partial float GetWindowWidth();

    /// <summary>
    /// get current window height (IT IS UNLIKELY YOU EVER NEED TO USE THIS). Shortcut for GetWindowSize().y.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetWindowHeight")]
    public static partial float GetWindowHeight();

    /// <summary>
    /// set next window position. call before Begin(). use pivot=(0.5f,0.5f) to center on given point, etc.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowPosEx")]
    public static partial void SetNextWindowPosEx(ImVec2 pos, ImGuiCond cond, ImVec2 pivot);

    /// <summary>
    /// set next window size. set axis to 0.0f to force an auto-fit on this axis. call before Begin()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowSize")]
    public static partial void SetNextWindowSize(ImVec2 size, ImGuiCond cond);

    /// <summary>
    /// set next window size limits. use 0.0f or FLT_MAX if you don't want limits. Use -1 for both min and max of same axis to preserve current size (which itself is a constraint). Use callback to apply non-trivial programmatic constraints.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowSizeConstraints")]
    public static partial void SetNextWindowSizeConstraints(ImVec2 size_min, ImVec2 size_max, ImGuiSizeCallback custom_callback, nint custom_callback_data);

    /// <summary>
    /// set next window content size (~ scrollable client area, which enforce the range of scrollbars). Not including window decorations (title bar, menu bar, etc.) nor WindowPadding. set an axis to 0.0f to leave it automatic. call before Begin()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowContentSize")]
    public static partial void SetNextWindowContentSize(ImVec2 size);

    /// <summary>
    /// set next window collapsed state. call before Begin()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowCollapsed")]
    public static partial void SetNextWindowCollapsed([MarshalAs(UnmanagedType.U1)] bool collapsed, ImGuiCond cond);

    /// <summary>
    /// set next window to be focused / top-most. call before Begin()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowFocus")]
    public static partial void SetNextWindowFocus();

    /// <summary>
    /// set next window scrolling value (use &lt; 0.0f to not affect a given axis).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowScroll")]
    public static partial void SetNextWindowScroll(ImVec2 scroll);

    /// <summary>
    /// set next window background color alpha. helper to easily override the Alpha component of ImGuiCol_WindowBg/ChildBg/PopupBg. you may also use ImGuiWindowFlags_NoBackground.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextWindowBgAlpha")]
    public static partial void SetNextWindowBgAlpha(float alpha);

    /// <summary>
    /// (not recommended) set current window position - call within Begin()/End(). prefer using SetNextWindowPos(), as this may incur tearing and side-effects.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowPos")]
    public static partial void SetWindowPos(ImVec2 pos, ImGuiCond cond);

    /// <summary>
    /// (not recommended) set current window size - call within Begin()/End(). set to ImVec2(0, 0) to force an auto-fit. prefer using SetNextWindowSize(), as this may incur tearing and minor side-effects.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowSize")]
    public static partial void SetWindowSize(ImVec2 size, ImGuiCond cond);

    /// <summary>
    /// (not recommended) set current window collapsed state. prefer using SetNextWindowCollapsed().
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowCollapsed")]
    public static partial void SetWindowCollapsed([MarshalAs(UnmanagedType.U1)] bool collapsed, ImGuiCond cond);

    /// <summary>
    /// (not recommended) set current window to be focused / top-most. prefer using SetNextWindowFocus().
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowFocus")]
    public static partial void SetWindowFocus();

    /// <summary>
    /// set named window position.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowPosStr")]
    public static partial void SetWindowPosStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name, ImVec2 pos, ImGuiCond cond);

    /// <summary>
    /// set named window size. set axis to 0.0f to force an auto-fit on this axis.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowSizeStr")]
    public static partial void SetWindowSizeStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name, ImVec2 size, ImGuiCond cond);

    /// <summary>
    /// set named window collapsed state
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowCollapsedStr")]
    public static partial void SetWindowCollapsedStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name, [MarshalAs(UnmanagedType.U1)] bool collapsed, ImGuiCond cond);

    /// <summary>
    /// set named window to be focused / top-most. use NULL to remove focus.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetWindowFocusStr")]
    public static partial void SetWindowFocusStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    #endregion

    #region Windows Scrolling

    /// <summary>
    /// Windows Scrolling
    /// - Any change of Scroll will be applied at the beginning of next frame in the first call to Begin().
    /// - You may instead use SetNextWindowScroll() prior to calling Begin() to avoid this delay, as an alternative to using SetScrollX()/SetScrollY().
    /// get scrolling amount [0 .. GetScrollMaxX()]
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetScrollX")]
    public static partial float GetScrollX();

    /// <summary>
    /// get scrolling amount [0 .. GetScrollMaxY()]
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetScrollY")]
    public static partial float GetScrollY();

    /// <summary>
    /// set scrolling amount [0 .. GetScrollMaxX()]
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetScrollX")]
    public static partial void SetScrollX(float scroll_x);

    /// <summary>
    /// set scrolling amount [0 .. GetScrollMaxY()]
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetScrollY")]
    public static partial void SetScrollY(float scroll_y);

    /// <summary>
    /// get maximum scrolling amount ~~ ContentSize.x - WindowSize.x - DecorationsSize.x
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetScrollMaxX")]
    public static partial float GetScrollMaxX();

    /// <summary>
    /// get maximum scrolling amount ~~ ContentSize.y - WindowSize.y - DecorationsSize.y
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetScrollMaxY")]
    public static partial float GetScrollMaxY();

    /// <summary>
    /// adjust scrolling amount to make current cursor position visible. center_x_ratio=0.0: left, 0.5: center, 1.0: right. When using to make a "default/current item" visible, consider using SetItemDefaultFocus() instead.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetScrollHereX")]
    public static partial void SetScrollHereX(float center_x_ratio);

    /// <summary>
    /// adjust scrolling amount to make current cursor position visible. center_y_ratio=0.0: top, 0.5: center, 1.0: bottom. When using to make a "default/current item" visible, consider using SetItemDefaultFocus() instead.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetScrollHereY")]
    public static partial void SetScrollHereY(float center_y_ratio);

    /// <summary>
    /// adjust scrolling amount to make given position visible. Generally GetCursorStartPos() + offset to compute a valid position.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetScrollFromPosX")]
    public static partial void SetScrollFromPosX(float local_x, float center_x_ratio);

    /// <summary>
    /// adjust scrolling amount to make given position visible. Generally GetCursorStartPos() + offset to compute a valid position.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetScrollFromPosY")]
    public static partial void SetScrollFromPosY(float local_y, float center_y_ratio);

    #endregion

    #region Parameters stacks (font)
